--- a/docs/templates/footer.html
+++ b/docs/templates/footer.html
@@ -1,3 +1,8 @@
 <footer>
-    <p>&copy; 2024 shubhamkhaitan.com</p>
+    <div class="social-icons">
+        <a href="https://twitter.com/shubaaaaam343" target="_blank"><img src="/icons/X-icon.png" alt="X"></a>
+        <a href="https://www.linkedin.com/in/shubhamk343" target="_blank"><img src="/icons/linkedin-icon.png" alt="LinkedIn"></a>
+        <a href="https://www.instagram.com/shubaaaaam" target="_blank"><img src="/icons/instagram-icon.png" alt="Instagram"></a>
+    </div>
+    <p>&copy; 2026 shubhamkhaitan.com</p>
 </footer>
