--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -6,7 +6,7 @@ body, h1, h2, p, ul {
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #eeeff0; /* Light gray background */
+    background-color: #f4f5f6; /* Light gray background */
     color: #333; /* Dark gray text */
 }
 
