--- a/templates/header.html
+++ b/templates/header.html
@@ -1,11 +1,10 @@
 <header>
-    <h1>Shubham Khaitan</h1>
+    <h1><a href="/">Shubham Khaitan</a></h1>
     <nav>
         <ul>
-            <li><a href="/">Home</a></li>
             <li><a href="about">About</a></li>
-            <li><a href="blog">Blog</a></li>
             <li><a href="programs">Programs</a></li>
+            <li><a href="blog">Blog</a></li>
             <li><a href="contact">Contact</a></li>
         </ul>
     </nav>
