--- a/templates/header.html
+++ b/templates/header.html
@@ -1,5 +1,5 @@
 <header>
-    <h1><a href="/">Shubham Khaitan</a></h1>
+    <h1 style="color: #fff; text-decoration: none;"><a href="/">Shubham Khaitan</a></h1>
     <nav>
         <ul>
             <li><a href="about">About</a></li>
