--- a/css/styles.css
+++ b/css/styles.css
@@ -16,11 +16,6 @@ header {
     padding: 20px;
 }
 
-header h1 a {
-    color: #fff !important; /* Set color to white */
-    text-decoration: none !important; /* Remove underline */
-}
-
 nav ul {
     list-style-type: none;
 }
@@ -42,7 +37,7 @@ main {
 footer {
     background-color: #001b87; /* Navy blue footer */
     color: #fff; /* White footer text */
-    padding: 0px 0px;
+    padding: 10px 0px;
     position: fixed;
     bottom: 0;
     width: 100%;
@@ -55,17 +50,19 @@ footer p {
 
 .social-icons {
     display: inline-block;
-    margin-right: 10px; /* Adjust spacing between icons */
 }
 
 .social-icons a {
     display: inline-block;
 }
 
+.social-icons:not(:first-child) img {
+    margin-left: 30px;
+}
+
 .social-icons img {
     width: 22px; /* Adjust icon size */
     height: auto;
-    margin-right: 30px; /* Adjust spacing between icons */
     filter: brightness(0.95);
 }
 
