--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,7 @@ main {
 footer {
     background-color: #001b87; /* Navy blue footer */
     color: #fff; /* White footer text */
-    padding: 10px 0px;
+    padding: 0px 10px;
     position: fixed;
     bottom: 0;
     width: 100%;
@@ -45,7 +45,7 @@ footer {
 }
 
 footer p {
-    margin: 0; /* Remove default margin */
+    margin: 10px 0; /* Add margin bottom */
 }
 
 .social-icons {
@@ -56,7 +56,8 @@ footer p {
     display: inline-block;
 }
 
-.social-icons:not(:first-child) img {
+.social-icons a:not(:first-child) img {
+    margin-right: 0;
     margin-left: 30px;
 }
 
