--- a/css/styles.css
+++ b/css/styles.css
@@ -37,15 +37,12 @@ main {
 footer {
     background-color: #001b87; /* Navy blue footer */
     color: #fff; /* White footer text */
-    padding: 0px 10px;
+    padding: 10px 10px;
     position: fixed;
     bottom: 0;
     width: 100%;
+    align-items: center;
     text-align: center;
-}
-
-footer p {
-    margin: 10px 0; /* Add margin bottom */
 }
 
 .social-icons {
