--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,11 @@ header {
     padding: 20px;
 }
 
+header h1 a {
+    color: #fff !important; /* Set color to white */
+    text-decoration: none !important; /* Remove underline */
+}
+
 nav ul {
     list-style-type: none;
 }
