--- a/css/styles.css
+++ b/css/styles.css
@@ -16,9 +16,9 @@ header {
     padding: 20px;
 }
 
-header h1 a {
-    color: #fff !important; /* Set color to white */
-    text-decoration: none !important; /* Remove underline */
+header h1 {
+    color: #fff; /* Set color to white */
+    text-decoration: none; /* Remove underline */
 }
 
 nav ul {
