--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,12 @@ header {
     padding: 20px;
 }
 
-header h1 {
+header h1 a {
+    color: #fff; /* Set color to white */
+    text-decoration: none; /* Remove underline */
+}
+
+header nav ul li a {
     color: #fff; /* Set color to white */
     text-decoration: none; /* Remove underline */
 }
