--- a/templates/header.html
+++ b/templates/header.html
@@ -2,10 +2,10 @@
     <h1 style="color: #fff; text-decoration: none;"><a href="/">Shubham Khaitan</a></h1>
     <nav>
         <ul>
-            <li><a href="about">About</a></li>
-            <li><a href="programs">Programs</a></li>
-            <li><a href="blog">Blog</a></li>
-            <li><a href="contact">Contact</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/programs">Programs</a></li>
+            <li><a href="/blog">Blog</a></li>
+            <li><a href="/contact">Contact</a></li>
         </ul>
     </nav>
 </header>
