--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@ body {
     font-family: Arial, sans-serif;
     background-color: #f4f5f6; /* Light gray background */
     color: #333; /* Dark gray text */
+    overflow: auto;
 }
 
 header {
