--- a/templates/header.html
+++ b/templates/header.html
@@ -1,5 +1,5 @@
 <header>
-    <h1 style="color: #fff; text-decoration: none;"><a href="/"><img src="/icons/android-chrome-512x512.png" alt="Favicon" style="vertical-align: middle; width: 40px; height: auto;"> Shubham Khaitan</a></h1>
+    <h1 style="color: #fff; text-decoration: none;"><a href="/">Shubham Khaitan <img src="/icons/android-chrome-512x512.png" alt="Favicon" style="vertical-align: middle; width: 60px; height: auto;"></a></h1>
     <nav>
         <ul>
             <li><a href="/about">About</a></li>
