--- a/templates/header.html
+++ b/templates/header.html
@@ -1,5 +1,6 @@
 <header>
-    <h1 style="color: #fff; text-decoration: none;"><a href="/">Shubham Khaitan <img src="/icons/android-chrome-512x512.png" alt="Favicon" style="vertical-align: middle; width: 53px; height: auto;"></a></h1>
+    <h1 style="color: #fff; text-decoration: none;"><a href="/">Shubham Khaitan</a></h1>
+    <!-- <img src="/icons/android-chrome-512x512.png" alt="Favicon" style="vertical-align: middle; width: 53px; height: auto;"> -->
     <nav>
         <ul>
             <li><a href="/about">About</a></li>
