--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,9 @@ body {
     background-color: #f4f5f6; /* Light gray background */
     color: #333; /* Dark gray text */
     overflow: scroll;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 header {
@@ -43,6 +46,7 @@ nav ul li a {
 
 main {
     padding: 20px;
+    flex-grow: 1;
 }
 
 footer {
