--- a/css/styles.css
+++ b/css/styles.css
@@ -43,8 +43,7 @@ nav ul li a {
 
 main {
     padding: 20px;
-    overflow-y: auto;
-    max-height: calc(100vh - 200px);
+    overflow-y: scroll;
 }
 
 footer {
