--- a/templates/footer.html
+++ b/templates/footer.html
@@ -2,8 +2,9 @@
     <p>&copy; 2024 Shubham Khaitan</p>
     <br>
     <div class="social-icons">
-        <a href="https://twitter.com/shubaaaaam343" target="_blank"><img src="/icons/X-icon.png" alt="X"></a>
+        <a href="https://www.youtube.com/@shubhamkhaitan" target="_blank"><img src="/icons/youtube-icon.png" alt="Youtube"></a>
         <a href="https://www.linkedin.com/in/shubhamk343" target="_blank"><img src="/icons/linkedin-icon.png" alt="LinkedIn"></a>
+        <a href="https://twitter.com/shubaaaaam343" target="_blank"><img src="/icons/X-icon.png" alt="X"></a>
         <a href="https://www.instagram.com/shubaaaaam" target="_blank"><img src="/icons/instagram-icon.png" alt="Instagram"></a>
     </div>
 </footer>
